<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="Registration"
            type="com.ntmk.myapp.view_model.ForgotPassViewModel" />
    </data>

    <RelativeLayout
    android:background="@color/bgr_pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.activity.ForgotPassActivity">

    <LinearLayout
        android:id="@+id/lyt_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="60dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/logo_img"
                android:transitionName="logo_img" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crafty_girls"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/wild_florist"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:transitionName="logo_txt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lyt_start"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/reset_password"
            android:textColor="@color/text"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/txt_create_pass"
            android:textColor="@color/txt_unselected"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="14sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:textColorHint="@color/color_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:background="@drawable/style"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/txtActionBar"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textColorLink="#F3C5C5"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:padding="10dp"
            android:text="@string/back"
            android:textColorLink="#F3C5C5"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLink_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/create_new_account"
            android:textColor="@color/txt_title"
            android:textSize="14sp" />


    </LinearLayout>

</RelativeLayout>
</layout>