<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<RelativeLayout
    android:background="@drawable/bgr2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/lyt_start_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="60dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/logo_img"
                android:transitionName="logo_img" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crafty_girls"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/wild_florist"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:transitionName="logo_txt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lyt_start_regist"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="casual"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/color_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtName_regis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:autofillHints="username"
                android:background="@drawable/style"
                android:drawableStart="@drawable/ic_person_outline"
                android:drawablePadding="10dp"
                android:hint="@string/user"
                android:inputType="textPersonName"
                android:textColor="@color/txtActionBar"
                android:padding="10dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtMessageName"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/color_note"
            android:textSize="11sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:textColorHint="@color/color_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail_regis"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:background="@drawable/style"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/txtActionBar"
                android:padding="10dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtMessageEmail"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/color_note"
            android:textSize="11sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPass_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:textColorHint="@color/color_hint"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPass_regis"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:background="@drawable/style"
                android:drawableStart="@drawable/ic_security"
                android:drawablePadding="10dp"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColor="@color/txtActionBar"
                android:padding="10dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtMessagePass"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/color_note"
            android:textSize="11sp"
            android:textStyle="bold" />


        <CheckBox
            android:id="@+id/checkbox_robot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_note"
            android:padding="15dp"
            android:text="You are not a robot"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLink_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/already_gave_account"
            android:textColor="@color/text"
            android:textSize="14sp" />


    </LinearLayout>


</RelativeLayout>
</layout>